[package]
name = "rsdict"
version = "0.0.1"
authors = ["Sujay Jayakar <sujayakar314@gmail.com>"]
description = "Fast static rank and select data structure"
repository = "https://github.com/sujayakar/rsdict"
homepage = "https://github.com/sujayakar/rsdict"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["rank", "select"]
categories = ["data-structures"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
succinct = "0.5.2"

[dependencies.packed_simd]
version = "0.3"
features = ["into_bits"]

[dev-dependencies]
quickcheck = "0.9.0"
quickcheck_macros = "0.8.0"
criterion = "0.3"
rand = "0.7"

[[bench]]
name = "rank_select"
harness = false
