[package]
name = "rsdict"
version = "0.0.7"
authors = ["Sujay Jayakar <sujayakar314@gmail.com>"]
description = "Fast static rank and select data structure"
repository = "https://github.com/sujayakar/rsdict"
homepage = "https://github.com/sujayakar/rsdict"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["rank", "select", "succinct"]
categories = ["data-structures"]
edition = "2018"

[profile.release]
overflow-checks = true
debug-assertions = true
debug = true

[features]
default = []
fuzz = ["afl"]
simd = ["packed_simd"]

[dependencies]

[dependencies.packed_simd]
package = "packed_simd"
version = "0.3.9"
features = ["into_bits"]
optional = true

[dependencies.afl]
version = "0.13.3"
optional = true

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
criterion = "0.5"
rand = "0.8"
succinct = "0.5.2"

[[bench]]
name = "rank_select"
harness = false

[[test]]
name = "rsdict_fuzz"
path = "src/rsdict_fuzz.rs"
required-features = ["fuzz"]
harness = false
